<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.technotoil.ticket.ui.welcomeUser.WelcomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/welcome_bg"
        tools:context=".ui.welcomeUser.WelcomeActivity">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/welcome_bg" />

        <ImageView
            android:layout_width="@dimen/size_90"
            android:layout_height="@dimen/size_90"
            android:layout_marginTop="@dimen/size_150"
            android:src="@drawable/video_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/getStartedTitle"
            style="@style/mediumText20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/get_started"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/getStartedContent"
            style="@style/peraText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_30"
            android:layout_marginTop="@dimen/margin_23"
            android:gravity="center_horizontal|top"
            android:text="@string/lorem_ipsum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getStartedTitle" />


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_25"
            android:padding="@dimen/margin_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/skipText"
                style="@style/regularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/size_10"
                android:text="@string/skip" />

            <ImageView
                android:id="@+id/sliderDots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_slider1" />

<!--            <com.google.android.material.tabs.TabLayout-->
<!--                android:id="@+id/tabLayout"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="1dp"-->
<!--                android:layout_marginBottom="1dp"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/viewPager"-->
<!--                android:layout_centerInParent="true" >-->
<!--            </com.google.android.material.tabs.TabLayout>-->

<!--            <androidx.viewpager.widget.ViewPager-->
<!--                android:id="@+id/viewPager"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="0dp"-->
<!--                android:layout_marginStart="1dp"-->
<!--                android:layout_marginEnd="1dp"-->
<!--                android:layout_marginBottom="1dp"-->
<!--                android:layout_below="@+id/tabLayout"-->
<!--                android:layout_centerInParent="true">-->

<!--            </androidx.viewpager.widget.ViewPager>-->

            <LinearLayout
                android:id="@+id/nextIntroSlide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/size_10">

                <TextView
                    android:id="@+id/nextText"
                    style="@style/regularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/margin_12"
                    android:text="@string/next" />

                <ImageView
                    android:id="@+id/rightArrow"
                    android:layout_width="@dimen/size_32"
                    android:layout_height="@dimen/size_12"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/right_arrow_small" />

            </LinearLayout>


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
